@@ -7,6 +7,9 @@
    - markus@cvs.openbsd.org 2004/03/10 09:45:06
      [ssh.c]
      trim usage to match ssh(1) and look more like unix. ok djm@
+   - markus@cvs.openbsd.org 2004/03/11 08:36:26
+     [sshd.c]
+     trim usage; ok deraadt
 
 20040311
  - (djm) [configure.ac] Add standard license to configure.ac; ok ben, dtucker
@@ -908,4 +911,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3291 2004/03/21 22:34:58 djm Exp $
+$Id: ChangeLog,v 1.3292 2004/03/21 22:35:21 djm Exp $
